maintainIT2/src/objects/Warehouse__c.object
<CustomObject>
    <description>MRO Parts Warehouse</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account that owns the Storeroom</description>
        <inlineHelpText>Account that owns the Storeroom</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Storerooms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>City</description>
        <inlineHelpText>City</inlineHelpText>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Country</description>
        <inlineHelpText>Country</inlineHelpText>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Buyer_Active__c</fullName>
        <description>If the Default Buyer is &quot;Active&quot;, then the record owner for the Purchase Requisition created through the Batch APEX schedule for automatic replenishment will be changed to the Default Buyer.  Otherwise, the record owner will remain the User that scheduled the Batch APEX (usually the System Admin).</description>
        <formula>Default_Buyer__r.IsActive</formula>
        <inlineHelpText>If the Default Buyer is &quot;Active&quot;, then the record owner for the Purchase Requisition created through the Batch APEX schedule for automatic replenishment will be changed to the Default Buyer.</inlineHelpText>
        <label>Default Buyer Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Default_Buyer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Default Buyer (Automatically assigned on the Purchase Order when record is generated thru the automatic replenishment APEX logic).</description>
        <inlineHelpText>Default Buyer (Automatically assigned on the Purchase Order when record is generated thru the automatic replenishment APEX logic).</inlineHelpText>
        <label>Default Buyer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Storerooms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Parts Storeroom Description</description>
        <inlineHelpText>Parts Storeroom Description</inlineHelpText>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inventory_Balance_Sheet_Acct__c</fullName>
        <description>Inventory Balance Sheet Account for Part Valuations</description>
        <inlineHelpText>Inventory Balance Sheet Account for Part Valuations</inlineHelpText>
        <label>Inventory Balance Sheet Acct</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inventory_Write_Off_Account__c</fullName>
        <description>Inventory Write Off Account</description>
        <inlineHelpText>Inventory Write Off Account</inlineHelpText>
        <label>Inventory Write Off Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Province__c</fullName>
        <description>State/Province</description>
        <inlineHelpText>State/Province</inlineHelpText>
        <label>State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Storeroom_Status__c</fullName>
        <description>Storeroom Status</description>
        <inlineHelpText>Storeroom Status</inlineHelpText>
        <label>Storeroom Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <description>Street Address</description>
        <inlineHelpText>Street Address</inlineHelpText>
        <label>Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Zip_Postal_Code__c</fullName>
        <description>Zip / Postal Code</description>
        <inlineHelpText>Zip / Postal Code</inlineHelpText>
        <label>Zip/Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>

     <fields>
        <fullName>Assistant_Name__c</fullName>
        <label>Assistant Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>

    <fields>
        <fullName>Assistant_Phone__c</fullName>
         <label>Assistant Phone</label>        
        <type>Phone</type>
    </fields>

    <fields>
        <fullName>Birthdate__c</fullName>
         <label>Birthdate Date</label> 
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
         <label>Department</label>
        <length>80</length>
        <type>Text</type>
    </fields>
     
    <fields>
        <fullName>Do_Not_Call__c</fullName>
         <label>Do Not Call</label>
        <type>Checkbox</type>
          <defaultValue>true</defaultValue>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
         <label>Email</label>
        
        <type>Email</type>
    </fields>
     
     <fields>
        <fullName>Fax_Opt_Out__c</fullName>
         <label>Fax Opt Out</label>
        <type>Checkbox</type>
         <defaultValue>true</defaultValue>
    </fields>


<fields>
        <fullName>Salutation__c</fullName>
         <label>Salutation</label>
        <picklist>
            <picklistValues>
                <fullName>Mr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ms.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mrs.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prof.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>



 <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <formula>First_Name__c + &apos;&apos; + Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>


    <fields>
        <fullName>Home_Phone__c</fullName>
         <label>Home Phone</label>        
        <type>Phone</type>
    </fields> 
    

    <fields>
        <fullName>Lead_Source__c</fullName>
         <label>Lead Source</label>    
        <picklist>
            <picklistValues>
                <fullName>Web</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone Inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchased List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>

    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>


    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <picklist>
            <picklistValues>
                <fullName>Secondary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tertiary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields> 

    <fields>
        <fullName>Mobile_Phone__c</fullName>
         <label>Mobile Phone</label>        
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Other_Phone__c</fullName>
         <label>Other Phone</label>        
        <type>Phone</type>
    </fields> 
     
    <fields>
        <fullName>Title__c</fullName> 
         <label>Title</label>
        <length>128</length>
        <type>Text</type>
    </fields>


    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Annual_Revenue__c</fullName>
        <label>Annual Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    

<fields>
        <fullName>Customer_Priority__c</fullName>
        <label>Customer Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>D_U_N_S_Number__c</fullName>
        <label>D-U-N-S Number</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>

<fields>
        <fullName>Industry__c</fullName>
        <label>Industry</label>
        <picklist>
            <picklistValues>
                <fullName>Agriculture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apparel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biotechnology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemicals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entertainment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environmental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food &amp; Beverage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospitality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Machinery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not For Profit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recreation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shipping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telecommunications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transportation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>

    <fields>
        <fullName>Jigsaw__c</fullName>
        <label>Data.com Key</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAICS_Code__c</fullName>
        <label>NAICS Code</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAICS_Description__c</fullName>
        <label>NAICS Description</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_Of_Employees__c</fullName>
        <label>Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>

    <fields>
        <fullName>Number_of_Locations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ownership__c</fullName>
        <label>Ownership</label>
        <picklist>
            <picklistValues>
                <fullName>Public</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subsidiary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>

<fields>
        <fullName>Rating__c</fullName>
        <label>Rating</label>
        <picklist>
            <picklistValues>
                <fullName>Hot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cold</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SIC_Code__c</fullName>
        <label>SIC Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIC_Description__c</fullName>
        <label>SIC Description</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <picklist>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platinum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bronze</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Trade_Style__c</fullName>
        <label>Trade Style</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Type</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer - Direct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer - Channel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Channel Partner / Reseller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installation Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <picklist>
            <picklistValues>
                <fullName>Maybe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>


    <fields>
        <fullName>Vendor_Number__c</fullName>
        <description>Vendor Number</description>
        <inlineHelpText>Vendor Number</inlineHelpText>
        <label>Vendor Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>


    <fields>
        <fullName>Vendor_Site__c</fullName>
        <label>Vendor Site</label>
        <length>80</length>
        <type>Text</type>
    </fields>


     <fields>
        <fullName>Website__c</fullName>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Year_Started__c</fullName>
        <label>Year Started</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    

    <label>Warehouse</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Warehouse ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Warehouse</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>